k8s/monitoring.yaml
apiVersion: v1
kind: Service
metadata:
  name: iphone-service-pos-metrics
  labels:
    app: iphone-service-pos
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: iphone-service-pos
